test/src/e2e_vm_tests/test_programs/should_fail/multiple_config_blocks_two_libs/src/main.sw
script;

dep lib1;
dep lib2;

use lib1::*;
use lib2::*;

fn main() -> (u64, u64){
    (X, Y)
}
